DuPont DevSB/src/objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>fERP_Account_Type__c</fullName>
        <description>The SAP Account type from the related Account</description>
        <formula>Contact__r.Account.ERPAccountType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The SAP Account type from the related Account</inlineHelpText>
        <label>ERP Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fGross_Margin__c</fullName>
        <description>The Gross Margin associated with a specific Contract Price Request.  This is being used by DPC ICS US Powder at this time.  Before you use this field, please contact Jan Watson 302-992-2082, as the formula will need to be updated to reflect your business&apos; calculation.

(11/6/2017) - Removed Product2__r references as part of remediation effort.</description>
        <formula>if( ISNULL(Unit_Price__c) ||  Unit_Price__c==0 , 0 ,Unit_Price__c / Unit_Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fId18__c</fullName>
        <description>18 digit unique id for record. Same Id used for dataloader and other API tools</description>
        <formula>Id 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <inlineHelpText>18 digit unique id for record. Same Id used for dataloader and other API tools</inlineHelpText>
        <label>Id18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fReason_Level_1__c</fullName>
        <description>(11/6/2017) - Removed primaryReason__r reference as part of remediation effort.</description>
        <formula>NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Level 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fReason_Level_2__c</fullName>
        <description>(11/6/2017) - Removed primaryReason__r reference as part of remediation effort.</description>
        <formula>NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fReason_Level_3__c</fullName>
        <description>(11/6/2017) - Removed primaryReason__r reference as part of remediation effort.</description>
        <formula>NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Level 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fSegment_L1__c</fullName>
        <formula>primarySegment__r.SegmentL1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment L1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fSegment_L2__c</fullName>
        <formula>primarySegment__r.SegmentL2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment L2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fSegment_L3__c</fullName>
        <formula>primarySegment__r.SegmentL3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment L3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fSegment_Level_4__c</fullName>
        <formula>primarySegment__r.SegmentL4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment Level 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primarySegment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>Segmentation__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllRequestssubmitted</fullName>
        <columns>NAME</columns>
        <columns>Send_to_Company__c</columns>
        <columns>Contact__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>All Requests submitted</label>
        <language>en_US</language>
        <sharedTo>
            <group>DPTEMEASalesAidSpecialist</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Requests_Submitted</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Send_to_Company__c</columns>
        <columns>Contact__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>All Open Requests Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_LA_Samples_CSR_Brazil_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>BI-LA Samples CSR Brazil</label>
        <queue>BI_LA_Samples_CSR_Brazil</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_LA_Samples_Technicians_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>BI-LA Samples - Technicians</label>
        <queue>BI_LA_Samples_Technicians</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_LA_Samples_TeleSolutions_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>BI-LA Samples - TeleSolutions</label>
        <queue>BI_LA_Samples_TeleSolutions</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DPT_EMEA_Nomex_Label_Mgt</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Send_to_Company__c</columns>
        <columns>Send_to_Contact__c</columns>
        <columns>Tracking_Numbers__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Details__c</field>
            <operation>equals</operation>
            <value>DPT Nomex Labels</value>
        </filters>
        <label>DPT-EMEA Nomex Label Mgt</label>
        <language>en_US</language>
        <sharedTo>
            <group>DPT_EMEA_Nomex_Fulfillment</group>
            <roleAndSubordinatesInternal>DPTEMEA</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lettershop_Requests_Submitted</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Send_to_Company__c</columns>
        <columns>Contact__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Sample_Request_Catalog__c</field>
            <operation>equals</operation>
            <value>DPT-EMEA - Lettershop</value>
        </filters>
        <label>Lettershop Requests Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <portalRoleAndSubordinates>LettershopSAPartnerUser</portalRoleAndSubordinates>
            <roleAndSubordinatesInternal>DuPontProtectionTechnologies</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Nomex_Label_Orders</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Approved_Date__c</columns>
        <columns>Sample_Request_Catalog__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Send_to_Contact__c</columns>
        <columns>Send_to_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sample_Request_Catalog__c</field>
            <operation>startsWith</operation>
            <value>DPT Nomex®</value>
        </filters>
        <label>Nomex Label Orders</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>DPTEMEA</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RR_Donnelley_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Send_to_Company__c</columns>
        <columns>Contact__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sample_Request_Catalog__c</field>
            <operation>equals</operation>
            <value>DPS-NA - RR Donnelley</value>
        </filters>
        <label>RR Donnelley Requests</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>DuPontProtectionTechnologies</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Today_s_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>DPTNASalesAidSpecialist</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RQ-{000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <recordTypes>
        <fullName>BI_NA_Sample_Request</fullName>
        <active>true</active>
        <label>BI-NA Sample Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>PunchoutRequest</fullName>
        <active>false</active>
        <description>Punchout Requests ( DPC Colornet/BIP Orders through OMS )</description>
        <label>Punchout Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>SalesAidCapture</fullName>
        <active>true</active>
        <description>Sales Aid Requests record type for Capture or Not Started Stage</description>
        <label>Sales Aid - Capture</label>
    </recordTypes>
    <recordTypes>
        <fullName>SalesAidRequest</fullName>
        <active>true</active>
        <description>Sales Aid Request</description>
        <label>Sales Aid Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>SalesAidSubmitted</fullName>
        <active>true</active>
        <label>Sales Aid - Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Aid_In_Approval</fullName>
        <active>true</active>
        <description>Sales Aid Requests record type for Capture when Quantity Max Action in Request Item is set to &quot;Approval&quot;</description>
        <label>Sales Aid - In Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Service_Request</fullName>
        <active>true</active>
        <label>Technical Service Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>